--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="img-fluid" src="images/mac.png" alt="">
          </div>
          <div class="col-md-6">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam magnam provident eveniet.</h2>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse minima architecto aut, explicabo dolor tempore itaque animi? Magnam atque, nobis dignissimos vero nam quisquam perferendis.</p>
             <!-- Memory -->
             <h4 class="mt-4">Memory</h4>
