--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <div class="container mt-4">
          <hr>
-         <h1 class="text-center">Total: $<span>0</span></h1>
+         <h1 class="text-center">Total: $<span id="grand-total">1299</span></h1>
       </div>
    </main>
    <!-- Bootstrap JS CDN link -->
